# youtube-transcripts-search

./: .gitignore  ARANGODB_INTEGRATION_SUMMARY.md  CLAUDE.md  LICENSE  PROJECT_STRUCTURE.md  README.md  agents.db  config.py  debug_entity_extraction.py  docker-compose.yml  fetch_transcripts_cron.py  final_test_report.json  mcp_config.json  migrate_to_arangodb.py  pyproject.toml  pyproject.toml.backup  pytest.ini  run_all_tests.py  run_tests_with_reporter.py  setup.py  test_agent_system.py  test_report.json  test_results.json  test_scientific_simple.py  test_unified_search.py  test_youtube_api.py  validation_results.txt  validation_test.py  youtube_transcripts.db
.claude/arangodb_commands/: README.md  arangodb.md  health.md  llm-help.md  quickstart.md  serve.md  terminal_commands.md  test.md  workflow.md  workflow_updates_summary.md
.claude/simple_commands/: create_entity.md  create_relationship.md  delete_entity.md  get_entity.md  query_aql.md  search_keyword.md  search_semantic.md  store_memory.md  traverse_graph.md  update_entity.md
.github/workflows/: claude.yml
cli/: app.py  formatters.py  schemas.py  validators.py
core/: database.py  query.py  transcript.py
docs/: ARANGODB_INTEGRATION_ANALYSIS.md  ARANGODB_INTEGRATION_COMPLETE.md  ARANGODB_MIGRATION_GUIDE.md  ARANGODB_SETUP.md  CLEANUP_SUMMARY.md  DUAL_DATABASE_SUPPORT.md  LEVEL0_SCENARIOS_SUMMARY.md  MCP_PROMPTS_ALIGNMENT.md  README.md  RESEARCH_FEATURE_PARITY.md  SCIENTIFIC_FEATURES.md  YOUTUBE_API_INTEGRATION.md  YOUTUBE_API_SUCCESS.md  claude_module_communicator_migration_plan.md  test_results.txt  test_results_comprehensive.txt  test_results_final_comprehensive.txt  test_results_final_fixed.txt  test_results_final_run.txt  test_results_full.txt
docs/00_quick_start/: README.md
docs/01_architecture/: README.md
docs/02_api_reference/: README.md
docs/03_guides/: README.md
docs/04_integration/: INTEGRATION_SUMMARY.md  README.md  arxiv_youtube_integration_scenarios.md  orchestrator_integration_guide.md
docs/05_development/: README.md  test_reporter_setup.md
docs/06_reports/: README.md
docs/99_tasks/: README.md
docs/correspondence/: grok_improvement.md  perplexity_youtube_api_retry.md  perplexity_youtube_comments.md
docs/ideas/: verl_integration.md
docs/integration/: youtube_arxiv_gitget_integration.md
docs/reports/: FINAL_REAL_TEST_REPORT.md  FINAL_SUMMARY.md  agent_system_implementation_report.md  benchmark_report_20250601_171952.md  benchmark_report_20250601_172036.md  benchmark_report_20250601_172101.md  benchmark_report_20250601_172239.md  benchmark_report_20250601_172504.md  benchmark_report_20250601_172629.md  benchmark_report_20250601_172831.md  claude_module_communicator_mcp_compliance_report.md  claude_test_reporter_integration.md  critical_analysis_007_20250528_135300.md  critical_analysis_actions_20250528.md  daily_verification_20250106.md  deepretrieval_integration_report.md  entity_extraction_test_report_20250528_124205.md  entity_extraction_test_report_20250528_124302.md  entity_extraction_test_report_20250528_124404.md  entity_extraction_test_report_20250528_124635.md  entity_extraction_test_report_20250528_130117.md  entity_extraction_test_report_20250528_130401.md  entity_extraction_test_report_20250528_130528.md  entity_extraction_test_report_20250528_135103.md  entity_extraction_test_report_20250528_135226.md  entity_extraction_test_report_20250528_135516.md  entity_extraction_test_report_20250528_141414.md  entity_extraction_test_report_20250528_141651.md  entity_extraction_test_report_20250530_072555.md  entity_extraction_test_report_20250530_073219.md  final_integration_report.md  final_integration_test_report_20250528_124656.md  final_test_report_20250528_092419.md  final_test_report_20250528_100714.md  final_test_status_report.md  granger_daily_fix_plan.md  granger_ecosystem_mcp_final_status.md  granger_mcp_standard_implementation.md  granger_spoke_alignment_report.md  granger_spoke_mcp_prompts_compliance_matrix.md  (+47 more)
docs/tasks/: 001_deepretrieval_integration.md  001_transcript_chunking_arangodb_integration.md  002_leverage_existing_modules.md  002_unified_search_implementation.md  003_implementation_examples.md  004_final_summary.md  005_complete_integration_task_list.md  005_complete_task_list_overview.md  007_run_all_tests.md
mcp/: schema.py  wrapper.py
scripts/: download_transcript.py  fix_all_test_reporters.py  fix_single_project_test_reporter.py  fix_test_imports.py  install.sh  migrate_to_arangodb.py  migrate_to_v2.py  remove_mocks_from_tests.py  run_tests.sh  setup_arangodb.py  train_deep_retrieval.py  verify_test_readiness.py
test_reports/: day_1_summary_report.md  default_test_report.txt  level_0_success_report.md  level_0_test_report.md  level_1_progress_report.md  skeptical_verification_20250604_170401.json  youtube-transcripts_test_report.txt  youtube_manual_test.json  youtube_transcripts_active_tests.json  youtube_transcripts_comprehensive_test.json  youtube_transcripts_final_comprehensive.json  youtube_transcripts_final_comprehensive_summary.md  youtube_transcripts_final_fixed.json  youtube_transcripts_final_report.md  youtube_transcripts_final_run.json  youtube_transcripts_final_test.json  youtube_transcripts_full_test.json  youtube_transcripts_full_test_after_fixes.json  youtube_transcripts_report.md  youtube_transcripts_summary.json  youtube_transcripts_test.json  youtube_transcripts_verification_report.md  youtube_transcripts_working_tests.json
tests/: README.md  benchmark_databases.py  conftest.py  quick_benchmark.py  run_full_tests.py  run_skeptical_test_verification.py  run_tests.py  test_all_integrations.py  test_arangodb_connection.py  test_entity_extraction.py  test_honeypot.py  test_hub_prompts.py  test_hybrid_search.py  test_integration_complete.py  test_integration_summary.py  test_mcp_prompts.py  test_minimal.py  test_relationship_extraction.py  test_reporter_verification.py  test_scientific_extractors.py  test_search_widening.py  test_unified_search.py  test_with_reporter.py  test_youtube_manually.py  test_youtube_with_reporter.py
(+118 files in other folders)
